--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.11",
     "validator": "^13.11.0",
     "web": "^0.0.2",
     "web3": "^4.7.0"
